[project]
name = "langchain_agent_demo"
version = "0.1.0"
description = ""
authors = [
    {name = "emoretto"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "openai (>=1.99.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "poetry-dotenv-plugin (>=0.2.0,<0.3.0)",    
]


[tool.dotenv]
location = ".env"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
